# probability-puzzles

./: LICENSE  README.md  puzzles.ipynb  pyproject.toml
puzzle/: __init__.py  src.py
